added startGame function, setNextQuestion and showCatagorys function

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <p class="intro">Select a Username & a Subject to Test your Knowledge</p>
 
         <div id="question-container" class="hide"></div>
-
-        <div id="username" class="username1">
+<!--
+        <div id="username" class="username1 hide">
             <form>
 
                 <label for="user"><h3>Username</h3></label>
@@ -35,6 +35,8 @@
 
             </form>
         </div>
+
+-->
         <div id="question" class="hide">Question</div>
 
         <div id="answer-buttons" class="btn-grid">
